added composer page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title></title>
-	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="cgi-bin/styles/main.css">
 	<!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
@@ -13,6 +13,8 @@
 
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<!-- jquery -->
+<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 </head>
 <body>
 	<div id="center">
@@ -21,18 +23,9 @@
 		<div id="basicdate"></div>
 	</div>
 	<div>
-			<h4>Project List</h4>
-			<ol>
-				<li>E commerce site</li>
-				<li>sports website</li>
-				<li>historical website</li>
-				<li>data analytics website</li>
-			</ol>
-	</div>
-	<div>
         	<h4>Pages</h4>
                         <ol>
-                                <li><a href="page1.html">Page 1</a></li>
+                                <li><a href="composers.html">Composers</a></li>
                                 <li><a href="page1.html">Page 2</a></li>
                                 <li><a href="page1.html">Page 3</a></li>
                                 <li><a href="play.html">Layout</a></li>
