created pages for all performers

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         	<h4>Pages</h4>
                         <ol>
                                 <li><a href="composers.html">Composers</a></li>
-                                <li><a href="page1.html">Page 2</a></li>
-                                <li><a href="page1.html">Page 3</a></li>
-                                <li><a href="play.html">Layout</a></li>
+                                <li><a href="pieces.html">Pieces</a></li>
+                                <li><a href="performances.html">Performances</a></li>
+                                <li><a href="performers.html">Performers</a></li>
                         </ol>
    	 </div>
 </body>
