--- a/index.html
+++ b/index.html
@@ -6,15 +6,7 @@
 	<title></title>
 	<link rel="stylesheet" href="cgi-bin/styles/main.css">
 	<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
-
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-<!-- jquery -->
-<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 </head>
 <body>
 	<div id="center">
@@ -31,6 +23,11 @@
                                 <li><a href="performers.html">Performers</a></li>
                         </ol>
    	 </div>
+   	 <!-- Latest compiled and minified JavaScript -->
+	<script src="cgi-bin/js/bootstrap.min.js"></script>
+	<script src="cgi-bin/js/angular.min.js"></script>
+	<!-- jquery -->
+	<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 </body>
 		<script language="JavaScript" type="text/javascript">
 			var now = new Date();
