--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                                 <li><a href="pieces.html">Pieces</a></li>
                                 <li><a href="performances.html">Performances</a></li>
                                 <li><a href="performers.html">Performers</a></li>
+                                <li><a href="cgi-bin/php/homework11.php">Homework 11</a></li>
                         </ol>
    	 </div>
    	 <!-- Latest compiled and minified JavaScript -->
