--- a/index.html
+++ b/index.html
@@ -17,11 +17,7 @@
 	<div>
         	<h4>Pages</h4>
                         <ol>
-                                <li><a href="composers.html">Composers</a></li>
-                                <li><a href="pieces.html">Pieces</a></li>
-                                <li><a href="performances.html">Performances</a></li>
-                                <li><a href="performers.html">Performers</a></li>
-                                <li><a href="cgi-bin/php/homework11.html">Homework 11</a></li>
+                                <li><a href="homework11.html">Homework 11</a></li>
                         </ol>
    	 </div>
    	 <!-- Latest compiled and minified JavaScript -->
