--- a/homework11.html
+++ b/homework11.html
@@ -7,42 +7,44 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
 		<script type="text/javascript">
-			var updateCounter = 0;
-				function AjaxPost_Construct( constructionType,passwordVar, commentVar,authorVar,cid, statusVar){
+        var updateCounter = 0;
+        function AjaxPost_Construct(constructionType,passwordVar,commentVar,authorVar,cid,statusVar){
+            alert('here');
             passwordVar = typeof passwordVar  !== 'undefined' ? passwordVar  : '';
             commentVar = typeof commentVar !== 'undefined' ? commentVar : '';
             authorVar = typeof authorVar !== 'undefined' ? authorVar : '';
             cid = typeof cid !== 'undefined' ? cid : '';
             statusVar = typeof statusVar !== 'undefined' ? statusVar : '';
-				$.post("cgi-bin/php/ajaxHomework10.php",{
-					constructionType: constructionType,
-					passowrd: passwordVar,
-					comment: commentVar,
-					author: authorVar,
-					commentid: cid,
-					status: statusVar},
-				function(data, status) {
-					if(constructionType == 'editlist'){
-						$('#divEditList').html(data);
-					}else if(constructionType == 'inputbox'){
-						$('#divInputBox').html(data);
-					}else if(constructionType == 'displaylist'){
-						$('#divDisplayList').html(data);
-					}else if(constructionType == 'editbox'){
-						$('#divEditBox').html(data);
-					}else if(constructionType == 'submitcomment'){
-						$('#divEditBox').html(data);
-					}else if(constructionType == 'update'){
-						updateCounter = updateCounter -1;
-						if(updateCounter == 0)
-						{
-							HideDisplayList();
-							ShowDisplayList();
-						}
-					}
-				});
-			}
-		</script>
+
+            $.post("ajaxHomework10.php",{
+                            constructiontype: constructionType,
+                            password: passwordVar,
+                            comment:commentVar,
+                            author: authorVar,
+                            commentid: cid,
+                            status: statusVar},
+                function(data, status){
+                    if(constructionType == 'editlist'){
+                        $('#divEditList').html(data);
+                    }else if(constructionType == 'inputbox'){
+                        $('#divInputBox').html(data);
+                    }else if(constructionType == 'displaylist'){
+                        $('#divDisplayList').html(data);
+                    }else if(constructionType == 'editbox'){
+                        $('#divEditBox').html(data);
+                    }else if(constructionType == 'submitcomment'){
+                        $('#divEditBox').html(data);
+                    }else if(constructionType == 'update'){
+                        updateCounter = updateCounter - 1;
+                        if(updateCounter == 0){
+                            HideDisplayList();
+                            ShowDisplayList();
+                        }
+                    }
+            });
+        }
+</script>
+
 
 		<!--						-->
 		<!--Jquery to modify html 	-->
