fixed function calls

--- a/homework11.html
+++ b/homework11.html
@@ -101,7 +101,7 @@
 		$(document).ready(function (){
 			ShowInputBox();
 			ShowEditBox();
-			ShowDisplayBox();
+			ShowDisplayList();
 
 			$('body').on('click','#btnCancelEdit', function(e){
 				e.preventDefault();
