changed php file index

--- a/homework11.html
+++ b/homework11.html
@@ -16,7 +16,7 @@
             cid = typeof cid !== 'undefined' ? cid : '';
             statusVar = typeof statusVar !== 'undefined' ? statusVar : '';
 
-            $.post("ajaxHomework10.php",{
+            $.post("ajaxhomework10.php",{
                             constructiontype: constructionType,
                             password: passwordVar,
                             comment:commentVar,
