--- a/homework11.html
+++ b/homework11.html
@@ -17,7 +17,7 @@
             statusVar = typeof statusVar !== 'undefined' ? statusVar : '';
 
             $.post("ajaxhomework10.php",{
-                            constructiontype: constructionType,
+                            constructionType: constructionType,
                             password: passwordVar,
                             comment:commentVar,
                             author: authorVar,
