this is the skeeter

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 	<nav class="navbar navbar-default" role="navigation">
 	  <div class="navbar-header">
-	    <a class="navbar-brand" href="#">INSERT LOGO</a>
+	    <a class="navbar-brand" href="index.html">INSERT LOGO</a>
 	  </div>
 	</nav>
 	<div class="jumbotron col-md-offset-1 col-md-10">
@@ -32,10 +32,10 @@
         </div>
 				<div class="row col-md-offset-1">
 					<div class="col-md-3">
-						<button class="btn btn-primary btn-lg">Sign In</button>
+						<a class="btn btn-primary btn-lg" href="loginpage.html">Sign In</a>
 					</div>
 					<div class="col-md-3">
-						<button class="btn btn-primary btn-lg">Sign Up</button>
+						<a class="btn btn-primary btn-lg" href="signup.html">Sign Up</a>
 					</div>
 				</div>
     	</div>
