--- a/loginpage.html
+++ b/loginpage.html
@@ -1,11 +1,3 @@
-<?php
-$mRootpath = "";
-$mFilepath = explode('/',dirname(__DIR__));
-foreach($mFilepath as $f){$mRootpath = $mRootpath.$f."/";if($f == "eecspage"){break;}}
-define('ROOT_PATH', $mRootpath);
-
-include ROOT_PATH.'cgi-bin/php/base.php';
-?>
 <!DOCTYPE html>
 <html>
   <head>
@@ -22,6 +14,21 @@ include ROOT_PATH.'cgi-bin/php/base.php';
         <a class="navbar-brand" href="index.html">INSERT LOGO</a>
       </div>
     </nav>
+    <div class='jumbotron'>
+      <div class="container">
+        <form role="form">
+          <div class="form-group">
+            <label for="email">Email address:</label>
+            <input type="email" class="form-control" id="email">
+          </div>
+          <div class="form-group">
+            <label for="pwd">Password:</label>
+            <input type="password" class="form-control" id="pwd">
+          </div>
+          <input type="submit" class="btn btn-default" href="dashboard.html">
+        </form>
+      </div>
+    </div>
   </body>
   <!-- Latest compiled and minified JavaScript -->
   <script src="cgi-bin/js/bootstrap.min.js"></script>
