--- a/signup.html
+++ b/signup.html
@@ -112,7 +112,7 @@
         </div>
       </div>
       <div class="row">
-        <input class='btn btn-primary col-sm-offset-6' type="submit" value= 'Submit' href="dashboard.html">
+        <input class='btn btn-primary col-sm-offset-6' type="submit" value= 'Submit' href="dashboard.php">
       </div>
       </div>
     </div>
